# Fraud_rl_ENV

./: .gitignore  Dockerfile  LICENSE  README.md  dashboard.html  evaluate.py  inference.py  model.pth  openenv.yaml  pyproject.toml  requirements.txt  train.py  visualize.py
project/: Dockerfile  README.md  inference.py  openenv.yaml  requirements.txt
project/tests/: test_env.py
server/: app.py
src/fraud_env/: __init__.py  environment.py  model.py  models.py  utils.py
src/fraud_env/server/: app.py
tasks/: easy.py  hard.py  medium.py
