[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fraud_rl_env"
version = "0.1.0"
description = "FastAPI-based fraud detection reinforcement learning environment."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openenv-core",
    "fastapi",
    "uvicorn",
    "pydantic",
    "torch",
    "numpy",
]

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["fraud_env*", "server*"]

[project.scripts]
server = "fraud_env.server.app:main"
