[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fraud_investigator_simulator"
version = "1.2.0"
description = "High-stakes Fraud Investigator Simulator - Real-Time AI Decision Environment."

readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openenv-core",
    "fastapi",
    "uvicorn",
    "pydantic",
    "torch",
    "numpy",
]

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["fraud_env*", "server*"]

[project.scripts]
server = "fraud_env.server.app:main"
